--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         <section id="about" class="mb-20 pt-16 fade-in-element">
             <div class="max-w-4xl mx-auto">
                 <h1 class="text-5xl font-extrabold text-white mb-4">Hello! I'm Omar &mdash; a passionate Machine Learning Researcher and aspiring expert in the Tech Industry!</h1>
-                <p class="text-xl text-indigo-400 font-semibold mb-6">Software Developer & Machine Learning Researcher</p>
+                <p class="text-xl text-indigo-400 font-semibold mb-6">Undergraduate Software Developer & Machine Learning Researcher</p>
                 <p class="text-lg text-gray-300 leading-relaxed">
-                    I am an Honors Computer Science student at UMass Amherst with a passion for building scalable, high-performance systems. My current work focuses heavily on time-series foundation models and engineering model decoders with the goal of decreasing required compute. Outside of academics, I am very into to fitness and bodybuilding, and have been playing chess since I was a child!
+                    I'm an Honors Computer Science student at UMass Amherst with a passion for building innovative, high-performance systems. My current work focuses heavily on time-series foundation models and engineering model decoders with the goal of decreasing required compute. Outside of academics, I am very into to fitness, health, and linguistics! I'm even pursuing a secondary major in Russian, alongside Computer Science!
                 </p>
             </div>
         </section>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg border-t-4 border-indigo-500 hover:shadow-xl hover:shadow-indigo-900/20 transition border-x border-b border-gray-700 fade-in-element">
                     <h3 class="text-2xl font-bold text-white mb-2">My Professional Portfolio <br> Oct. 2025 - Nov. 2025</h3>
-                    <p class="text-gray-400 text-sm mb-4">JavaScript, HTML, React, CSS, TailwindCSS</p>
+                    <p class="text-gray-400 text-sm mb-4">JavaScript, HTML, React, CSS, TailwindCSS, Vercel</p>
                     <p class="text-gray-300 mb-4">
                         Well, now that you've seen most of it, how are you liking it?
                     <a href="#" class="text-indigo-400 hover:text-indigo-300 font-semibold transition">View Project &rarr;</a>
@@ -289,12 +289,13 @@
             <div class="flex flex-wrap gap-3 fade-in-element">
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">JavaScript</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">TypeScript</span>
-                <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">Jest</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">C</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">C#</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">C++</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">Python</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">Java</span>
+                <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">Jest</span>
+                <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">Criterion</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">JUnit</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">HTML</span>
                 <span class="bg-indigo-900/50 text-indigo-200 border border-indigo-700 text-sm font-medium px-4 py-2 rounded-full shadow-md">FastAPI</span>
