Adding about me section update

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           </div>
           
           <ul class="mt-6 list-disc space-y-2 pl-5 text-sm text-gray-700">
-            <li>Incoming on the Software Development Team, where I will develop software automatation for the Patient Monitoring Solution.</li>
+            <li>Incoming, where I will work on software development and automation for the Patient Monitoring Solution.</li>
             </ul>
            <a href="https://www.usa.philips.com/healthcare/patient-monitoring" target="_blank" class="mt-4 text-sm font-medium text-gray-600 hover:text-black block">
              Visit Website →
