Made a mistake regarding capital letter in Machine Learning

--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
           <p>
               I'm an <span class="font-semibold text-gray-900">Honors Computer Science student at UMass Amherst</span>,
               with a passion in AI-integrated software and research-driven ML tooling.
-              I care a lot about building systems that are fast, reliable, and genuinely useful for people.
+              I care a lot about building systems that are fast, reliable, and genuinely useful for our communities.
             </p>
             <p>
               Right now, I'm working in the <span class="font-semibold text-gray-900">Laboratory for Advanced System Software</span>,
-              extending the FMTK toolkit for classification, anomaly detection, forecasting, and more — aiming to make TSFM workflows
-              usable in just a few lines of code.
+              extending our Foundation Model toolkit for tasks like classification, anomaly detection, forecasting, and more — aiming to make the workflows
+              usable in just a few lines of code for our end users!
             </p>
             <p>
               Outside of code and research, I'm serious about <span class="font-semibold text-gray-900">bodybuilding and fitness</span>,
               and I'm also studying <span class="font-semibold text-gray-900">Russian</span> as a second major. Building discipline in the gym
-              and in language learning go hand in hand with my passionate approach to my work.
+              and in language learning go hand in hand with my passionate approach to my work!
             </p>
         </div>
 
@@ -218,7 +218,7 @@
             <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">TypeScript</span>
             <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">React</span>
             <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">PyTorch</span>
-            <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">LangChain</span>
+            <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">Machine Learning Algorithms</span>
             <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">AWS Cloud Services</span>
             <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">Docker</span>
             <span class="border border-gray-200 px-3 py-1 rounded-full bg-gray-50">Time-Series Foundation Models</span>
@@ -261,7 +261,7 @@
         My Previous Work
       </p>
       <h2 class="text-3xl font-normal text-gray-900 text-center font-serif-display mb-10">
-        Experiences
+        Experience
       </h2>
 
       <div class="space-y-12 mx-auto"> 
@@ -284,7 +284,7 @@
             </div>
           </div>
           <ul class="mt-6 list-disc space-y-2 pl-5 text-sm text-gray-700">
-            <li>Incoming, where I will work on software development and automation for the Patient Monitoring Solution.</li>
+            <li>Working on software development and automation for the Patient Monitoring Solution.</li>
           </ul>
            <a href="https://www.usa.philips.com/healthcare/patient-monitoring" target="_blank" class="mt-4 text-sm font-medium text-gray-600 hover:text-black block">
              Visit Website →
@@ -305,7 +305,7 @@
               </div>
             </div>
             <div class="text-left md:text-right flex-shrink-0 ml-14 md:ml-0">
-              <p class="text-sm font-normal text-gray-500">Sep. 2025 – Current</p>
+              <p class="text-sm font-normal text-gray-500">Sep. 2025 – Jan. 2026</p>
             </div>
           </div>
           <ul class="mt-6 list-disc space-y-2 pl-5 text-sm text-gray-700">
@@ -336,7 +336,7 @@
             </div>
           </div>
           <ul class="mt-6 list-disc space-y-2 pl-5 text-sm text-gray-700">
-            <li>Responsible for designing and deploying robust, end-to-end Natural Language Processing pipelines that formed the backbone of the proprietary SecureGPT Platform, an LLM service dedicated to private client contract obfuscation.</li>
+            <li>Responsible for designing, developing and deploying robust, end-to-end Natural Language Processing pipelines that formed the backbone of the proprietary SecureGPT Platform, an LLM service dedicated to private client contract obfuscation.</li>
             <li>Utilized AWS Lambda for serverless execution and Docker for containerization to ensure platform scalability, while integrating advanced LLM guardrails to maintain strict protection and compliance standards for sensitive data.</li>
             <li>Collaborated extensively across the Software Development team to develop, test, and ship critical platform features that were immediately deployed and actively used by enterprise clients.</li>
           </ul>
@@ -363,7 +363,7 @@
           <div>
             <h3 class="text-xl font-medium text-gray-900 mb-1">Time-Series Foundation Model Toolkit (FMTK)</h3>
             <p class="text-xs text-gray-500 mb-3">PyTorch · NumPy · TSFM Backbones</p>
-            <p class="text-sm text-gray-700">Contributed core components to FMTK, including dataset loaders and evaluation flows for FordA, Epilepsy, ECG5000, and more.</p>
+            <p class="text-sm text-gray-700">Contributed core components to toolkit, including dataset loaders and evaluation flows for two sensor datasets (FordA and Epilepsy), and new, benchmarked, model wrappers for the Mantis and MOMENT time-series foundation model backbones.</p>
           </div>
           <a href="https://github.com/" target="_blank" class="mt-4 text-sm font-medium text-gray-600 hover:text-black block">View Project →</a>
         </article>
@@ -371,8 +371,8 @@
         <article class="border border-gray-200 p-6 rounded-xl shadow-sm hover:shadow-md transition flex flex-col justify-between h-full">
           <div>
             <h3 class="text-xl font-medium text-gray-900 mb-1">Evil Hangman Game</h3>
-            <p class="text-xs text-gray-500 mb-3">C · AVL Trees · Data Structures</p>
-            <p class="text-sm text-gray-700">A C implementation of the Evil Hangman word game designed to keep the player guessing as long as possible. Uses an AVL tree to manage candidate word families.</p>
+            <p class="text-xs text-gray-500 mb-3">C · AVL Trees · Memory Management</p>
+            <p class="text-sm text-gray-700">A C implementation of the Evil Hangman word game designed to keep the player guessing as long as possible. Uses an AVL tree and dynamic arrays to manage candidate word families, along with robust low-level memory management.</p>
           </div>
           <a href="https://github.com/" target="_blank" class="mt-4 text-sm font-medium text-gray-600 hover:text-black block">View Project →</a>
         </article>
